tests/NormalTests/paczka1/small_fuzzy/97041616.err
Error in line 5: XOZEh A408 13,5
Error in line 3: zuOW A408 5,7
